Version 1.1.1 (?? ??? 2006)
 - Fixed bug 1545314: duplicate code redundancies - edit_user_handler.php
 - Fixed bug 1509458: Reminders are coming at the wrong time
 - Fixed bug 1536288: URL missing folder name
 - Fixed bug 1512310: Path Truncation in Windows
 - Fixed bug 1522439: Wrong colors for 'Manage Calendar of'
 - Fixed bug 1542228: Background for "days with events" color not working
 - Fixed bug 1543579: typos and other minor glitches - view_entry.php
 - Fixed bug 1522357: after upgrading 'categories' are enabled
 - Fixed bug 1541558: Non-users ignore "NONUSER_AT_TOP" during import
 - Fixed bug 1532286: UAC settings of 'admins' will be overwritten
 - Fixed bug 1538312: get_my_users() may return incorrect cached data
 - Fixed bug 1538669: UAC issue with "invite" permissions vs "view"
 - Fixed bug 1540251: Activity log wrong for imported entries
 - Fixed bug 1538055: UAC for "Default Configuration" does not show correct values
 - Fixed bug 1539899: postgres problem
 - Fixed bug 1538718: Logic typo in 'view_entry.php'
 - Fixed bug 1536702: Repeated events don't show up in Availability window
 - Fixed bug 1536755: Activity Log for single event shows incorrect time
 - Fixed bug 1536785: Activity Log Report only shows times in GMT
 - Fixed bug 1521837: no entries for 'deleted entries' at 'activity.log'
 - Fixed bug 1522560: 'Scheduling Conflict events' will be displayed in mixed
 - Fixed bug 1530179: 'Public Access' using UAC will not be translated
 - Fixed bug 1518552: PHP5 and MySQLi Warnings
 - Fixed bug 1520002: 'top-menue' are not at the left-margin for year.php
 - Fixed bug 1516114: Javascript top menu does'nt work in french
 - Added hCalendar feature to Remote Calendars
 - Fixed bug 1513448: Cannot Display Attachment
 - Fixed bug 1511337: time-stamps at the 'activity-log' are incorrect
 - Fixed bug 1511120: 'unapproved-icon' in 'top-menue' not properly displayed
 - Fixed bug 1510761: missing 'back to my calendar' in the 'top-menue'